--- a/109.html
+++ b/109.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário augusto (ID 109)" />
     <meta property="og:description" content="Contato: " />
-    <meta property="og:url" content="https://SEU_USUARIO.github.io/usuarios/109.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/109.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://SEU_USUARIO.github.io/usuarios/imagens/109.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/109.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
