--- a/45.html
+++ b/45.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário THIAGO (ID 45)" />
     <meta property="og:description" content="Contato: 19992908414" />
-    <meta property="og:url" content="https://SEU_USUARIO.github.io/usuarios/45.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/45.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://SEU_USUARIO.github.io/usuarios/imagens/45.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/45.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
