--- a/76.html
+++ b/76.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário PENA (ID 76)" />
     <meta property="og:description" content="Contato: 19981429430" />
-    <meta property="og:url" content="https://SEU_USUARIO.github.io/usuarios/76.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/76.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://SEU_USUARIO.github.io/usuarios/imagens/76.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/76.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
