--- a/93.html
+++ b/93.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário alexandre (ID 93)" />
     <meta property="og:description" content="Contato: 19992648427" />
-    <meta property="og:url" content="https://SEU_USUARIO.github.io/usuarios/93.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/93.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://SEU_USUARIO.github.io/usuarios/imagens/93.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/93.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
