--- a/105.html
+++ b/105.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário lucas (ID 105)" />
     <meta property="og:description" content="Contato: " />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/105.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/105.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/105.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/105.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
