--- a/108.html
+++ b/108.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário ygor (ID 108)" />
     <meta property="og:description" content="Contato: " />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/108.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/108.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/108.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/108.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
