--- a/22.html
+++ b/22.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário JULIO (ID 22)" />
     <meta property="og:description" content="Contato: 19993306933" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/22.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/22.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/22.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/22.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
