--- a/32.html
+++ b/32.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário DINHO (ID 32)" />
     <meta property="og:description" content="Contato: 19992510115" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/32.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/32.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/32.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/32.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
