--- a/36.html
+++ b/36.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário HEBER (ID 36)" />
     <meta property="og:description" content="Contato: 19999991710" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/36.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/36.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/36.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/36.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
