--- a/48.html
+++ b/48.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário HELTON (ID 48)" />
     <meta property="og:description" content="Contato: 19994679032" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/48.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/48.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/48.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/48.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
