--- a/70.html
+++ b/70.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário DOUGLAS (ID 70)" />
     <meta property="og:description" content="Contato: 19996036891" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/70.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/70.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/70.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/70.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
