--- a/82.html
+++ b/82.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário MECANINHO (ID 82)" />
     <meta property="og:description" content="Contato: 19999126785" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/82.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/82.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/82.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/82.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
