--- a/84.html
+++ b/84.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário ROGER (ID 84)" />
     <meta property="og:description" content="Contato: 15997550828" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/84.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/84.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/84.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/84.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
