--- a/85.html
+++ b/85.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário Becker (ID 85)" />
     <meta property="og:description" content="Contato: 19982219047" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/85.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/85.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/85.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/85.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
