--- a/88.html
+++ b/88.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Usuário cipa2022 (ID 88)" />
     <meta property="og:description" content="Contato: 19991778532" />
-    <meta property="og:url" content="https://josepaulolopes.github.io/usuarios/88.html" />
+    <meta property="og:url" content="https://josepaulolopes.github.io/colaboradores/88.html" />
     <meta property="og:site_name" content="SeuSite" />
-    <meta property="og:image" content="https://josepaulolopes.github.io/usuarios/imagens/88.jpg" />
+    <meta property="og:image" content="https://josepaulolopes.github.io/colaboradores/imagens/88.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
